syntax = "proto3";

package sustain.synopsis.metadata;

import "google/protobuf/timestamp.proto";
import "dataset_info.proto";
import "health_check.proto";

message CreateSessionRequest {
    string dataset_id = 1;
    string client_id = 2;
}

message CreateSessionResponse {
    int64 session_id = 1;
    DatasetInfo dataset = 2;
    google.protobuf.Timestamp created_at = 3;
}

service IngestService {
    rpc checkHealth (HealthCheckRequest) returns (HealthCheckResponse);
    rpc createSession (CreateSessionRequest) returns (CreateSessionResponse);
}

